<resources>
    <string name="app_name">LaboratorioCalificado02</string>
    <string name="titulo_ej_01">Examen Calificado 02</string>
    <string name="mostrar">Mostrar</string>
    <string name="ocultar">Ocultar</string>
    <string name="registro_pedidos">Registro de Pedidos</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="numero_cliente">Número Cliente</string>
    <string name="productos">Productos</string>
    <string name="ciudad">Ciudad</string>
    <string name="direccion">Dirección</string>
    <string name="btn_registrar">Registrar</string>
    <string name="pedido">Pedido</string>
    <string name="ubicacion">Ubicación</string>
</resources>