<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Ejercicio02">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_pedidos"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/default_margin"/>

            <EditText
                android:id="@+id/etNombreCliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_cliente"
                android:background="@drawable/edittext_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"/>

            <EditText
                android:id="@+id/etNumeroCliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/numero_cliente"
                android:background="@drawable/edittext_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNombreCliente"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"/>


            <EditText
                android:id="@+id/etProductos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/productos"
                android:background="@drawable/edittext_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNumeroCliente"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"/>

            <EditText
                android:id="@+id/etCiudad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/ciudad"
                android:background="@drawable/edittext_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etProductos"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"/>

            <EditText
                android:id="@+id/etDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:background="@drawable/edittext_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etCiudad"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"/>

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/btn_registrar"
                android:background="@drawable/edittext_border"
                android:textColor="@android:color/black"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/etDireccion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/default_margin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
