<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Ejercicio01">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_ej_01"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="25dp"/>

    <View
        android:id="@+id/green_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mostrar"
            android:background="@drawable/edittext_border"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/button_hide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ocultar"
            android:background="@drawable/edittext_border"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_margin="8dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
